--- a/client_code/ViewRecalls/form_template.yaml
+++ b/client_code/ViewRecalls/form_template.yaml
@@ -8,6 +8,14 @@ components:
   name: drop_down_1
   properties: {}
   type: DropDown
+- layout_properties: {slot: default}
+  name: label_priority_level
+  properties: {}
+  type: Label
+- layout_properties: {slot: default}
+  name: label_description
+  properties: {}
+  type: Label
 container:
   properties: {html: '@theme:single-column.html'}
   type: HtmlTemplate
