--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,6 +7,8 @@ unique_ids:
   forms:
     ChangePassword: WZQLL7CAJCUYKI5JICF6JBBLADSHPTKV
     HighPriorityRecalls: '1730656507812857793991661.2001'
+    HighPriorityRecalls.RowTemplate2: '1730749987269385292492067.3364'
+    HighPriorityRecalls.RowTemplate3: '1730752691648253548714565.3459'
     Home: E543JOQDTFKLTQBYIEEJE6HCAU4SP3RI
     Login: 27AVBLNJ7Q5NPXYW4MD7MPSKULENSFGD
     Logout: 2E7Y5B2QE3FJLOHKS5F62NEZIEXFS7Y6
