Created HighPriorityRecallRow and HighPriorityRecalls.ItemTemplate2; Edited ViewRecalls, HighPriorityRecalls and ServerModule1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,7 +6,9 @@ unique_ids:
     theme.css: RUQOTVV7XKMBPO4ERZAQ2X7NHTSOZ2RT
   forms:
     ChangePassword: WZQLL7CAJCUYKI5JICF6JBBLADSHPTKV
+    HighPriorityRecallRow: '1730763836770266784911509.653'
     HighPriorityRecalls: '1730656507812857793991661.2001'
+    HighPriorityRecalls.ItemTemplate2: '1730763611886296111373574.6854'
     HighPriorityRecalls.RowTemplate2: '1730749987269385292492067.3364'
     HighPriorityRecalls.RowTemplate3: '1730752691648253548714565.3459'
     HighPriorityRecalls.RowTemplate4: '1730755696856927685301425.9274'
