--- a/client_code/HighPriorityRecalls/form_template.yaml
+++ b/client_code/HighPriorityRecalls/form_template.yaml
@@ -8,11 +8,6 @@ components:
         name: label_recall
         properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: title, spacing: null, spacing_above: small, spacing_below: small, text: '', tooltip: '', underline: false, visible: true}
         type: Label
-      - event_bindings: {click: button_1_click}
-        layout_properties: {column: PLIHQV, grid_position: 'WKZADK,CYPJJA'}
-        name: button_1
-        properties: {align: right, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing: null, spacing_above: none, spacing_below: none, text: button_1, tooltip: '', underline: false, visible: true}
-        type: Button
       - data_bindings:
         - code: |
             self.item['Recall ID']
@@ -31,9 +26,17 @@ components:
         name: label_priority
         properties: {align: left, background: '', bold: false, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: title, spacing: null, spacing_above: small, spacing_below: small, text: '', tooltip: '', underline: false, visible: true}
         type: Label
+      - layout_properties: {}
+        name: repeating_panel_1
+        properties: {background: '', border: '', foreground: '', item_template: HighPriorityRecallRow, items: null, margin: null, role: null, spacing_above: small, spacing_below: small, tooltip: '', visible: true}
+        type: RepeatingPanel
       name: data_row_panel_1
       properties: {align: center, auto_display_data: true, background: '', bold: true, border: '', font: '', font_size: null, foreground: '', italic: false, item: null, margin: null, role: null, spacing_above: small, spacing_below: small, tooltip: '', underline: false, visible: true}
       type: DataRowPanel
+    - event_bindings: {click: button_1_click}
+      name: Delete
+      properties: {align: full, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', icon: 'fa:500px', icon_align: top, italic: false, role: null, spacing: null, spacing_above: none, spacing_below: none, text: Delete, tooltip: '', underline: false, visible: true}
+      type: Button
     layout_properties: {grid_position: 'WKZADK,CVGKSR'}
     name: data_grid_1
     properties:
